--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,14 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "zod": "^3.24.2"
   }
 }
