--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 		"@tanstack/react-query": "^5.56.2",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.0.0",
@@ -37,6 +38,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
+		"react-markdown": "^10.1.0",
 		"react-router-dom": "^6.26.2",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
