--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+
   "author": "",
   "license": "ISC",
   "description": "",
@@ -20,5 +22,10 @@
     "mongoose": "^8.12.1",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
