--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,9 +1,18 @@
+# Dependencies
 node_modules
 .env
+
+# Build outputs
 dist
 dist-ssr
 *.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Editor directories
 .vscode/*
 !.vscode/extensions.json
 .DS_Store
-*.log
