--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
+    "next": "^15.2.4",
     "validator": "^13.15.0",
     "zod": "^3.24.2"
   },
@@ -30,6 +34,7 @@
     "@types/validator": "^13.12.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "@types/multer": "^1.4.12"
   }
 }
