--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,18 +1,36 @@
 # Dependencies
-node_modules
-.env
+node_modules/
+dist/
+dist-ssr/
 
-# Build outputs
-dist
-dist-ssr
-*.local
+# Environment files
+.env
+.env.local
+.env.*.local
 
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
+yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+.idea/
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Testing
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
