--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.1",
+    "@types/pdf-parse": "^1.1.4",
+    "@types/pdfjs-dist": "^2.10.378",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -19,10 +21,17 @@
     "express": "^4.21.2",
     "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.9.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
     "next": "^15.2.4",
+    "pdf-extract": "^1.0.11",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "1.1.1",
+    "pdf-text-extract": "^1.5.0",
+    "pdf2json": "^3.1.5",
+    "pdfjs-dist": "^5.1.91",
     "validator": "^13.15.0",
     "zod": "^3.24.2"
   },
